<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arcs_cohort_rviz</name>
  <version>0.0.0</version>
  <description>RViz configuration and launch files for the ARCS CoHORT project.</description>
  <maintainer email="barry.ridge@csun.edu">Barry Ridge</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rviz2</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
